--- a/NTI_atmega32/.vscode/settings.json
+++ b/NTI_atmega32/.vscode/settings.json
@@ -6,6 +6,9 @@
         "dio.h": "c",
         "us_hc_sr04.h": "c",
         "td_delay.h": "c",
-        "servo.h": "c"
+        "servo.h": "c",
+        "pwm1_interface.h": "c",
+        "spi.h": "c",
+        "rfid.h": "c"
     }
 }
